# genban-server

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
config/: README.md
config/dev/: app_config.json  logging_config.json
config/prod/: app_config.json
docs/deployment/: systemd-deploy.md
docs/deployment/migrations/: 2026-04-23.md
docs/design/: agent模块需求分析与代码设计.md  接口文档.md  架构设计.md  记忆系统实现方案.md  记忆系统架构设计.md  项目规划.md
scripts/: add_column.py  create_user.py  delete_user.py  generate_rsa_keys.py  init_project.py  migrate_simplify_conversation_memory.py  query_conversation_memories.py  user_cost_report.py
skills/docx/: SKILL.md
skills/docx/scripts/: comment.py
skills/example-skill/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py
src/: app.py
src/agent/: agent.py  chat_factory.py  entities.py  exceptions.py  stop_indicator.py
src/agent/hooks/: base_hook.py  entities.py  hook_manager.py  hook_registry.py
src/agent/model/: entities.py  message_formatter.py  model_caller.py  model_provider.py
src/agent/tools/: base_tool.py  entities.py  tool_caller.py  tool_parser.py  tool_registry.py
src/assistant/: assistant.py  assistant_manager.py  conversation_manager.py  entities.py  exceptions.py  modules.py
src/assistant/hooks/: chats_hook.py  model_hook.py  prompt_hook.py  stream_hook.py
src/assistant/web/: assistant_controller.py  sse_formatter.py  stream_manager.py
src/assistant/worker/: agent_worker_manager.py  user_agent_worker.py
src/common/: async_executor.py  exceptions.py  logger.py  thread_executor.py  thread_pool_executor.py
src/common/message/: message_pipe.py  message_pipe_factory.py
src/common/utils/: file_type_util.py  json_util.py  path_util.py  rsa_util.py  sys_util.py  time_util.py
src/config/: config.py  exceptions.py  prompts_loader.py
src/config/jsons/: app_config.json  logging_config.json
src/config/prompts/: assistant_prompt.py  context_compression_prompt.py  env_prompt.py  memory_prompt.py  schedule_prompt.py  skill_prompt.py  web_search_prompt.py
src/gateway/: routers.py
src/gateway/web/: assistant_controller.py  entities.py  routers.py  sse_formatter.py  stream_manager.py
src/model/: entities.py  message_formatter.py  model_caller.py  model_provider.py
src/model/formatter/: message_formatter.py
src/model/providers/: dashscope_multi_provider.py  dashscope_provider.py  openai_provider.py
src/modules/: base_module.py  entities.py  module_manager.py  modules_manager.py
src/modules/conversation/: conversation_module.py  entities.py  exceptions.py
src/modules/file_system/: entities.py  exceptions.py  file_system_controller.py  file_system_module.py  path_validator.py
src/modules/im/: im_module.py
src/modules/memory/: chats_hook.py  conversation_manager.py  memory_module.py  read_memory_hook.py  write_memory_hook.py
src/modules/schedule/: exceptions.py  schedule_module.py
src/modules/settings/: entities.py  setting_controller.py  setting_model_hook.py  setting_tool.py  settings_module.py
src/modules/shell/: shell_module.py  shell_tool.py
src/modules/skills/: entities.py  exceptions.py  skill_loader.py  (+5 more)
src/user/: auth.py  entity.py  exceptions.py  user_config_manager.py  user_controller.py  user_manager.py  user_test.py
test/: qqbot_test.py
(+80 files in other folders)
