[project]
name = "genban"
version = "0.1.0"
description = "Genban AI 个人助理系统服务端"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "apify_fingerprint_datapoints>=0.12.0",
    "APScheduler>=3.11.2",
    "attrs>=25.4.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "browserforge>=1.2.4",
    "cachetools>=7.0.2",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "cryptography>=46.0.5",
    "cssselect>=1.4.0",
    "curl_cffi>=0.14.0",
    "dashscope>=1.25.13",
    "defusedxml>=0.7.1",
    "distro>=1.9.0",
    "docopt>=0.6.2",
    "dotenv>=0.9.9",
    "et_xmlfile>=2.0.0",
    "fastapi>=0.135.1",
    "flatbuffers>=25.12.19",
    "frozenlist>=1.8.0",
    "greenlet>=3.3.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jiter>=0.13.0",
    "librt>=0.8.1",
    "lxml>=6.0.2",
    "magika>=0.6.2",
    "markdownify>=1.2.2",
    "markitdown>=0.1.5",
    "mpmath>=1.3.0",
    "msgspec>=0.20.0",
    "multidict>=6.7.1",
    "mypy>=1.19.1",
    "mypy_extensions>=1.1.0",
    "nodeenv>=1.10.0",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.3",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "orjson>=3.11.8",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "patchright>=1.58.2",
    "pathspec>=1.0.4",
    "pdfminer.six>=20251230",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "platformdirs>=4.9.2",
    "playwright>=1.58.0",
    "propcache>=0.4.1",
    "protobuf>=7.34.0",
    "pycparser>=3.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "pyee>=13.0.1",
    "PyJWT>=2.11.0",
    "pypdf>=6.8.0",
    "pypdfium2>=5.6.0",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "PyYAML>=6.0.3",
    "qq-botpy>=1.2.1",
    "requests>=2.32.5",
    "scrapling>=0.4.3",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.3",
    "SQLAlchemy>=2.0.48",
    "starlette>=0.52.1",
    "sympy>=1.14.0",
    "tld>=0.13.2",
    "tqdm>=4.67.3",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
    "w3lib>=2.4.1",
    "websocket-client>=1.9.0",
    "yarg>=0.1.10",
    "yarl>=1.23.0",
    "zai-sdk>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
python_version = "3.12"
disable_error_code = ["union-attr"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
python-preference = "only-system"

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
